<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.nemi</groupId>
		<artifactId>nemi-starter-core</artifactId>
		<version>1.0.1</version>
		<relativePath/>
	</parent>

	<artifactId>nemi-product-manager</artifactId>
	<version>1.0.0</version>
	<packaging>jar</packaging>
	<name>Nemi Product Manager</name>
	<description>nemi-product-manager</description>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.awspring.cloud</groupId>
				<artifactId>spring-cloud-aws-dependencies</artifactId>
				<version>3.1.1 </version> <!-- or latest -->
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>com.nemi</groupId>
			<artifactId>nemi-base</artifactId>
			<version>1.0.10</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.7.5</version>
		</dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
            <version>3.5.0</version>
        </dependency>
	</dependencies>

	<build>

	</build>
	
	<repositories>
		<repository>
			<id>gitlab-group-maven</id>
			<url>https://gitlab.com/api/v4/groups/112488156/-/packages/maven</url>
		</repository>
	</repositories>
</project>